[tool.poetry]
name = "mlia_cicd"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvain@zyssman.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
